--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                                             <!-- start product image -->
                                             <div class="product-image">
                                                 <!-- start product image -->
-                                                <a href="#">
+                                                <a href="buy.html">
                                                     <!-- image -->
                                                     <img class="primary blur-up lazyload" data-src="assets/img/kitty/f.jpeg" src="assets/img/kitty/f.jpeg" alt="image" title="product">
                                                     <!-- End image -->
@@ -692,7 +692,7 @@
                                             <!-- start product image -->
                                             <div class="product-image">
                                                 <!-- start product image -->
-                                                <a href="#">
+                                                <a href="buy.html">
                                                     <!-- image -->
                                                     <img class="primary blur-up lazyload" data-src="assets/img/kitty/n.jpeg" src="assets/img/kitty/n.jpeg" alt="image" title="product">
                                                     <!-- End image -->
@@ -884,7 +884,7 @@
                                             <!-- start product image -->
                                             <div class="product-image">
                                                 <!-- start product image -->
-                                                <a href="#">
+                                                <a href="buy.html">
                                                     <!-- image -->
                                                     <img class="primary blur-up lazyload" data-src="assets/img/kitty/n.jpeg" src="assets/img/kitty/n.jpeg" alt="image" title="product">
                                                     <!-- End image -->
