--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         	<div class="home-slideshow">
             	<div class="slide">
                 	<div class="blur-up lazyload bg-size">
-                        <img class="blur-up lazyload bg-img" data-src="assets/images/slideshow-banners/belle-banner1.jpg" src="assets/img/kitty/k.jpeg" alt="Shop On Bluekitty" title="Bluekitty" />
+                        <img class="blur-up lazyload bg-img" data-src="assets/img/kitty/k.jpeg" src="assets/img/kitty/k.jpeg" alt="Shop On Bluekitty" title="Bluekitty" />
                         <div class="slideshow__text-wrap slideshow__overlay classic bottom">
                             <div class="slideshow__text-content bottom">
                                 <div class="wrap-caption center">
