--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
                                                 <!-- End product name -->
                                                 <!-- product price -->
                                                 <div class="product-price">
-                                                    <span class="price">1000.00</span>
+                                                    <span class="price">$1000.00</span>
                                                 </div>
                                                 <!-- End product price -->
                                             </div>
@@ -1304,7 +1304,7 @@
                                                 <!-- End product name -->
                                                 <!-- product price -->
                                                 <div class="product-price">
-                                                    <span class="price">1050.00</span>
+                                                    <span class="price">$1050.00</span>
                                                 </div>
                                                 <!-- End product price -->
                                             </div>
